--- a/tools/BankFinder/build.gradle
+++ b/tools/BankFinder/build.gradle
@@ -46,7 +46,7 @@ kotlin {
     sourceSets {
         commonMain {
             dependencies {
-                api project(":common")
+
             }
         }
 
@@ -66,7 +66,12 @@ kotlin {
 
         jvmTest {
             dependencies {
+                implementation kotlin("test-junit")
 
+                implementation "org.junit.jupiter:junit-jupiter:$junitVersion"
+                runtimeOnly "org.junit.jupiter:junit-jupiter-engine:$junitVersion"
+
+                implementation "org.slf4j:slf4j-simple:$slf4jVersion"
             }
 
         }
