--- a/build.gradle
+++ b/build.gradle
@@ -33,6 +33,6 @@ allprojects {
 task jarAll {
     dependsOn = [
             "BankFinder:jvmJar",
-            "LuceneBankFinder:jvmJar"
+            "LuceneBankFinder:jar"
     ]
 }
