Fixed including resources for native build

--- a/BankFinderRest/src/main/resources/application.properties
+++ b/BankFinderRest/src/main/resources/application.properties
@@ -20,6 +20,8 @@ quarkus.console.disable-input=true
 
 # Quarkus Native settings
 
+quarkus.native.resources.includes=BankList.json
+
 quarkus.native.enable-https-url-handler=true
 quarkus.native.enable-all-security-services=true
 
