Added Loki Logger

--- a/BankFinderRest/src/main/resources/application.properties
+++ b/BankFinderRest/src/main/resources/application.properties
@@ -9,6 +9,21 @@ quarkus.resteasy.gzip.enabled=true
 quarkus.resteasy.gzip.max-input=10M
 
 
+# Logging
+
+quarkus.log.console.async=true
+
+quarkus.log.loki.host-url=http://loki.monitoring:3100
+%dev.quarkus.log.loki.host-url=http://localhost:3100
+%test.quarkus.log.loki.enable=false
+
+quarkus.log.loki.field.app.include=true
+
+quarkus.log.loki.field.kubernetes.include=true
+quarkus.log.loki.field.kubernetes.prefix=off
+quarkus.log.loki.field.kubernetes.field.containername.include=false
+
+
 # disable this output:
 # Press [h] for more options>
 # Tests paused
