--- a/BankFinderRest/src/main/resources/application.properties
+++ b/BankFinderRest/src/main/resources/application.properties
@@ -1,6 +1,5 @@
 # HTTP settings (for production and dev)
 
-quarkus.http.port=8080
 %dev.quarkus.http.port=9108
 
 quarkus.http.cors=true
@@ -47,12 +46,19 @@ quarkus.container-image.name=bank-finder-api
 quarkus.container-image.tag=1.0.0-beta1
 
 
+# Metrics and Health
 
-# so that on server endpoints like /openapi, /swagger-ui, /health can be reached under /bankfinder (under /q/ it's not reachable on server)
-quarkus.http.non-application-root-path=/bankfinder
+# Kubernetes / Prometheus won't find endpoints under /q/health, /q/metrics, ..., so remove /q (= Quarkus default sub path) from path
+quarkus.micrometer.export.prometheus.path=/metrics
+
+quarkus.smallrye-health.root-path=/health
+quarkus.smallrye-health.ui.always-include=true
 
 
 # OpenAPI and Swagger-UI
+
+# so that in Kubernetes Swagger-UI, Health UI, ... can be reached under /bankfinder (under /q/ it's not reachable via ingress)
+quarkus.http.non-application-root-path=/bankfinder
 
 quarkus.swagger-ui.always-include=true
 quarkus.swagger-ui.theme=flattop
@@ -62,5 +68,3 @@ quarkus.smallrye-openapi.info-title=Bank Finder
 quarkus.smallrye-openapi.info-version=1.0.0
 quarkus.smallrye-openapi.info-description=API to find German banks
 quarkus.smallrye-openapi.info-contact-email=dev@codinux.net
-
-quarkus.smallrye-health.ui.always-include=true
