Updated Quarkus version

--- a/BankFinder/build.gradle
+++ b/BankFinder/build.gradle
@@ -9,9 +9,7 @@ ext.artifactName = "bank-finder"
 
 kotlin {
     jvm {
-        compilations.all {
-            kotlinOptions.jvmTarget = '1.8'
-        }
+        jvmToolchain(8)
         withJava()
         testRuns["test"].executionTask.configure {
             useJUnitPlatform()
