--- a/BankFinderRest/src/main/resources/application.properties
+++ b/BankFinderRest/src/main/resources/application.properties
@@ -31,6 +31,9 @@ quarkus.log.loki.field.kubernetes.field.containername.include=false
 quarkus.test.continuous-testing=disabled
 quarkus.console.disable-input=true
 
+# disable Analytics
+quarkus.analytics.disabled=true
+
 
 # Quarkus Native settings
 
