--- a/gradle.properties
+++ b/gradle.properties
@@ -5,13 +5,13 @@ kotlin.code.style=official
 org.gradle.jvmargs=-Xmx3072m
 
 
-kotlinVersion=1.8.20
+kotlinVersion=1.9.10
 
 javaUtilsVersion=1.0.18
 
 luceneUtilsVersion=0.6.0
 
-quarkusVersion=2.16.6.Final
+quarkusVersion=3.5.0
 
 lokiLoggerVersion=0.5.1
 
