--- a/BankFinderRest/src/main/resources/application.properties
+++ b/BankFinderRest/src/main/resources/application.properties
@@ -7,6 +7,17 @@ quarkus.http.cors=true
 quarkus.resteasy.gzip.enabled=true
 quarkus.resteasy.gzip.max-input=10M
 
+# log request response times
+quarkus.http.access-log.enabled=true
+quarkus.http.record-request-start-time=true
+# for all variables see: https://quarkus.io/guides/http-reference#configuring-http-access-logs
+# %h Remote host name
+# %s HTTP status code of the response
+# %D Time taken to process the request, in millis
+# %r First line of the request
+# %b Bytes sent, excluding HTTP headers, or '-' if no bytes were sent
+quarkus.http.access-log.pattern=%h %s %D ms "%r" %b bytes
+
 
 # Logging
 
