--- a/BankFinderRest/src/main/resources/application.properties
+++ b/BankFinderRest/src/main/resources/application.properties
@@ -3,6 +3,9 @@
 %dev.quarkus.http.port=9108
 
 quarkus.http.cors=true
+quarkus.http.cors.origins=http://localhost:${quarkus.http.port},/https://([a-zA-Z0-9\\-_]+)\\.dankito\\.net/
+%dev.quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
+%dev.quarkus.http.cors.methods=*
 
 quarkus.resteasy.gzip.enabled=true
 quarkus.resteasy.gzip.max-input=10M
