--- a/BankFinderRest/src/main/resources/application.properties
+++ b/BankFinderRest/src/main/resources/application.properties
@@ -2,13 +2,13 @@
 
 %dev.quarkus.http.port=9108
 
+quarkus.http.enable-compression=true
+quarkus.http.compress-media-types=application/json,text/html,text/plain,text/xml,text/css,text/javascript,application/javascript,application/graphql+json
+
 quarkus.http.cors=true
 quarkus.http.cors.origins=http://localhost:${quarkus.http.port},/https://([a-zA-Z0-9\\-_]+)\\.dankito\\.net/
 %dev.quarkus.http.cors.headers=accept, authorization, content-type, x-requested-with
 %dev.quarkus.http.cors.methods=*
-
-quarkus.resteasy.gzip.enabled=true
-quarkus.resteasy.gzip.max-input=10M
 
 # log request response times
 quarkus.http.access-log.enabled=true
