--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,8 @@ pluginManagement {
     }
 
     plugins {
+        id("org.jetbrains.kotlin.multiplatform") version "$kotlinVersion"
+
         id("io.quarkus") version quarkusVersion
         id("org.jetbrains.kotlin.jvm") version "$kotlinVersion"
         id("org.jetbrains.kotlin.plugin.allopen") version "$kotlinVersion"
