--- a/gradle.properties
+++ b/gradle.properties
@@ -7,7 +7,9 @@ org.gradle.jvmargs=-Xmx3072m
 
 kotlinVersion=1.9.25
 
-javaUtilsVersion=1.0.18
+kotlinxSerializationVersion=1.6.2
+
+klfVersion=1.6.2
 
 luceneUtilsVersion=0.6.0
 
@@ -24,5 +26,4 @@ assertJVersion=3.12.2
 
 mockitoVersion=2.22.0
 
-slf4jVersion=1.7.32
 logbackVersion=1.2.3
