Fixed LuceneBankFinder setup and converted Gradle file to Kotlin Script

--- a/gradle.properties
+++ b/gradle.properties
@@ -11,7 +11,11 @@ kotlinxSerializationVersion=1.6.2
 
 klfVersion=1.6.2
 
+
 luceneUtilsVersion=0.6.0
+
+javaUtilsVersion=1.0.18
+
 
 quarkusVersion=3.8.4
 
