--- a/BankFinderRest/src/main/resources/application.properties
+++ b/BankFinderRest/src/main/resources/application.properties
@@ -13,6 +13,7 @@ quarkus.http.cors.origins=http://localhost:${quarkus.http.port},/https://([a-zA-
 # log request response times
 quarkus.http.access-log.enabled=true
 quarkus.http.record-request-start-time=true
+quarkus.http.access-log.exclude-pattern=/metrics
 # for all variables see: https://quarkus.io/guides/http-reference#configuring-http-access-logs
 # %h Remote host name
 # %s HTTP status code of the response
