--- a/BankFinderRest/src/main/resources/application.properties
+++ b/BankFinderRest/src/main/resources/application.properties
@@ -31,11 +31,7 @@ quarkus.log.loki.host-url=http://loki.monitoring:3100
 %dev.quarkus.log.loki.host-url=http://localhost:3100
 %test.quarkus.log.loki.enable=false
 
-quarkus.log.loki.field.app.include=true
-
-quarkus.log.loki.field.kubernetes.include=true
-quarkus.log.loki.field.kubernetes.prefix=off
-quarkus.log.loki.field.kubernetes.field.containername.include=false
+%prod.quarkus.log.loki.field.kubernetes.include=true
 
 
 # disable this output:
