--- a/BankFinderRest/src/main/resources/application.properties
+++ b/BankFinderRest/src/main/resources/application.properties
@@ -33,6 +33,10 @@ quarkus.log.loki.host-url=http://loki.monitoring:3100
 
 %prod.quarkus.log.loki.field.kubernetes.include=true
 
+quarkus.log.console.stacktrace.root-cause-first=true
+quarkus.log.console.stacktrace.max-frames-per-throwable=4
+quarkus.log.console.stacktrace.max-nested-throwables=0
+
 
 # disable this output:
 # Press [h] for more options>
