--- a/BankFinderRest/src/main/resources/application.properties
+++ b/BankFinderRest/src/main/resources/application.properties
@@ -28,8 +28,8 @@ quarkus.http.access-log.pattern=%h %s %D ms "%r" %b bytes
 quarkus.log.console.async=true
 
 quarkus.log.console.stacktrace.root-cause-first=true
-quarkus.log.console.stacktrace.max-frames-per-throwable=4
-quarkus.log.console.stacktrace.max-nested-throwables=0
+%prod.quarkus.log.console.stacktrace.max-frames-per-throwable=4
+%prod.quarkus.log.console.stacktrace.max-nested-throwables=0
 
 quarkus.log.loki.host-url=http://loki.monitoring:3100
 %dev.quarkus.log.loki.host-url=http://localhost:3100
