--- a/BankFinderRest/src/main/resources/application.properties
+++ b/BankFinderRest/src/main/resources/application.properties
@@ -21,6 +21,7 @@ quarkus.http.access-log.exclude-pattern=/metrics
 # %r First line of the request
 # %b Bytes sent, excluding HTTP headers, or '-' if no bytes were sent
 quarkus.http.access-log.pattern=%h %s %D ms "%r" %b bytes
+quarkus.http.access-log.pattern=%{i,X-Forwarded-For} %h %s %D ms "%r" %b bytes %{i,User-Agent}
 
 
 # Logging
