Updated Quarkus version

--- a/BankFinderRest/src/main/resources/application.properties
+++ b/BankFinderRest/src/main/resources/application.properties
@@ -26,7 +26,7 @@ quarkus.http.access-log.pattern=%{i,X-Forwarded-For} %h %s %D ms "%r" %b bytes %
 
 # Logging
 
-quarkus.log.console.async=true
+quarkus.log.console.async.enable=true
 
 quarkus.log.console.stacktrace.root-cause-first=true
 %prod.quarkus.log.console.stacktrace.max-frames-per-throwable=4
